Fixed the unaligned bars with the background by removing the unnecessary bar style. Removed the arrow buttons next to the values

--- a/src/components/Bar.css
+++ b/src/components/Bar.css
@@ -49,3 +49,13 @@
     height: 25px;
     outline: none;
 }
+
+input[type='number']::-webkit-inner-spin-button, 
+input[type='number']::-webkit-outer-spin-button {
+    appearance: none;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+input[type='number'] {
+    appearance: textfield;
+}
